# fdio

./: .gitignore  LICENCE  README.md  setup.cfg  setup.py
src/fdio/: fdio.py  utils.py
