[metadata]
name = fdio
version = attr: fdio.__version__
description = A CLI tool that manages files and directories.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ayoub A.
author_email = aberbach.me@gmail.com
license = MIT
license_files = LICENSE
keywords = cli, file, io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    importlib-metadata; python_version < "3.11"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    executable-name = fdio.fdio:cli
